# ListeningAgentAi

./: .gitignore  Makefile  README.md  pyproject.toml  redarky_project_plan.docx  redarky_project_plan_extracted.txt  requirements.txt
apify_actor_redarky/: Dockerfile  main.js
apify_actor_redarky/src/: reddit.js  retry.js  webhook.js
redarky/: docker-compose.yml
redarky/agents/: __init__.py
redarky/agents/graphs/: __init__.py  mission_graph.py
redarky/agents/nodes/: __init__.py  gap_finder_node.py  report_node.py  researcher_node.py  spec_writer_node.py  supervisor_node.py
redarky/agents/prompts/: gap_finder_prompt.py  report_prompt.py  spec_writer_prompt.py  supervisor_prompt.py
redarky/agents/services/: agent_storage_service.py  embedding_service.py  llm_service.py  retrieval_service.py
redarky/agents/state/: __init__.py  agent_state.py
redarky/airflow/: airflow.cfg  requirements.txt
redarky/airflow/dags/: redarky_pipeline.py
redarky/airflow/pipeline_utils/: database.py  files.py
redarky/airflow/tasks/: deduplicate.py  embeddings.py  extract.py  load_postgres.py  parquet.py  validate.py
redarky/airflow/utils/: config.py  logger.py
redarky/api/: Dockerfile  requirements.txt  start.sh
redarky/api/alembic/: env.py
redarky/api/app/: check_data.py  config.py  database.py  main.py  models.py  security.py
redarky/frontend/: tailwind.config.js
redarky/frontend/src/: App.jsx  index.css
redarky/pipeline/dags/: redarky_pipeline.py
redarky/pipeline/metrics/: ingestion_metrics.py
redarky/scraper/: Dockerfile  go.mod
(+103 files in other folders)
