[project]
name = "listeningagentai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.22.1",
    "amqp==5.3.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asyncpg>=0.31.0",
    "billiard==4.2.4",
    "celery==5.6.3",
    "certifi==2026.4.22",
    "click==8.3.3",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "fastapi==0.136.1",
    "flower==2.0.1",
    "greenlet==3.4.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanize==4.15.0",
    "idna==3.13",
    "kombu==5.6.2",
    "packaging==26.2",
    "prometheus-client==0.25.0",
    "prompt-toolkit==3.0.52",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydantic-settings>=2.14.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "redis==7.4.0",
    "six==1.17.0",
    "sqlalchemy==2.0.49",
    "starlette==1.0.0",
    "tornado==6.5.5",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "tzlocal==5.3.1",
    "uvicorn==0.46.0",
    "vine==5.1.0",
    "wcwidth==0.6.0",
]
